--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,6 +2,6 @@
   "robotWidth": 0.89,
   "robotLength": 0.91,
   "holonomicMode": true,
-  "generateJSON": true,
+  "generateJSON": false,
   "generateCSV": false
 }
