--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,21 +32,27 @@
   "source.fixAll.spotlessGradle": true
   },
   "cSpell.words": [
+    "APRILTAG",
     "algs",
     "Cancoder",
     "DEADBAND",
     "Feedforward",
+    "gamepad",
     "gradlew",
     "holonomic",
     "Huskie",
     "jama",
     "javac",
     "Nivore",
+    "odometry",
+    "photonvision",
+    "rapidreact",
     "REVPHJNI",
     "rezero",
     "Sedgewick",
     "setpoint",
     "SIMBOT",
+    "Teleop",
     "TRACKWIDTH",
     "tunables",
     "Vandermonde",
