first pass at backport
manually merged differences

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,9 +34,12 @@
   "cSpell.words": [
     "APRILTAG",
     "algs",
+    "brushless",
     "Cancoder",
+    "canbus",
     "CANID",
     "CANIDs",
+    "chargedup",
     "CTRE",
     "DEADBAND",
     "Feedforward",
@@ -46,19 +49,26 @@
     "Huskie",
     "jama",
     "javac",
+    "leds",
     "Nivore",
     "odometry",
     "photonvision",
+    "PIDF",
     "rapidreact",
     "REVPHJNI",
     "rezero",
+    "scurve",
     "Sedgewick",
     "setpoint",
     "SIMBOT",
     "Teleop",
+    "teleoperated",
     "TRACKWIDTH",
     "tunables",
     "Vandermonde",
-    "Xstance"
+    "VBAT",
+    "WPILOG",
+    "Xstance",
+    "YUYV"
   ]  
 }
