resolve spelling warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,9 @@
     "CANID",
     "CANIDs",
     "chargedup",
+    "closedloop",
     "CTRE",
+    "curr",
     "DEADBAND",
     "Feedforward",
     "gamepad",
@@ -52,6 +54,7 @@
     "leds",
     "Nivore",
     "odometry",
+    "openloop",
     "photonvision",
     "PIDF",
     "rapidreact",
