build season backport (#36)
## Vision ##
* add support for multiple cameras
* add support for transforming coordinate system based on alliance color
* add support for disabling vision subsystem
* calculate standard deviation based on distance to target when adding vision measurement to pose estimator
* add support to check if pose estimator has converged to vision-determined pose
* add support to only add vision measurement to pose estimator if within distance threshold to tag
* use getTimestampSeconds method instead of getLatencyMillis method to timestamp results per recommendation
* add support to reset pose estimator based on pose derived from visible tag


## Drivetrain ##
* add slow-mode feature (robot velocities are scaled down when enabled)
* add pitch and roll to gyro io inputs
* add support to enable coast mode only after disabled for specified period of time
* change default to field-relative mode
* add accessors for yaw, pitch, and roll from gryo
* add support to force field-relative driving
* add accessor for average swerve module drive current


## Swerve ##
* add accessor for drive motor current


## Commands ##
* add drive-to-pose command (closed loop straight-line motion to pose)
* add rotate-to-angle command (closed loop rotational setpoint with optional driver-controlled translational motion)
* add configurable acceleration limiting to TeleopSwerve command


## Move to Pose ##
* add move-to-pose command to generate autonomous paths on-the-fly
* add Field2d and Region2d classes to model field as a collection of regions with transition points between regions
* add support for generating a path between two poses using Field2d


## Subsystem ##
* add generic subsystem as an example


## Autonomous ##
* add support for transforming paths based on alliance color
* add "auto" path for empirically determining wheel diameter
* add "auto" path for setting initial pose to facilitate testing
* add "auto" path for tu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,10 +34,15 @@
   "cSpell.words": [
     "APRILTAG",
     "algs",
+    "brushless",
     "Cancoder",
+    "canbus",
     "CANID",
     "CANIDs",
+    "chargedup",
+    "closedloop",
     "CTRE",
+    "curr",
     "DEADBAND",
     "Feedforward",
     "gamepad",
@@ -46,19 +51,27 @@
     "Huskie",
     "jama",
     "javac",
+    "leds",
     "Nivore",
     "odometry",
+    "openloop",
     "photonvision",
+    "PIDF",
     "rapidreact",
     "REVPHJNI",
     "rezero",
+    "scurve",
     "Sedgewick",
     "setpoint",
     "SIMBOT",
     "Teleop",
+    "teleoperated",
     "TRACKWIDTH",
     "tunables",
     "Vandermonde",
-    "Xstance"
+    "VBAT",
+    "WPILOG",
+    "Xstance",
+    "YUYV"
   ]  
 }
