add comments for the new characterization algorithm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,8 +55,10 @@
     "Nivore",
     "odometry",
     "openloop",
+    "Penrose",
     "photonvision",
     "PIDF",
+    "pseudoinverse",
     "rapidreact",
     "REVPHJNI",
     "rezero",
