fix warnings; refactor periodic callback to command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,11 +32,11 @@
   "source.fixAll.spotlessGradle": true
   },
   "cSpell.words": [
-    "APRILTAG",
     "algs",
+    "APRILTAG",
     "brushless",
-    "Cancoder",
     "canbus",
+    "Cancoder",
     "CANID",
     "CANIDs",
     "chargedup",
@@ -62,6 +62,7 @@
     "rezero",
     "scurve",
     "Sedgewick",
+    "selfcheck",
     "setpoint",
     "SIMBOT",
     "Teleop",
