add Gyro class for Phoenix6
remove gyroOffset as yaw can now be set synchronously
add simulated Pigeon2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,11 +32,11 @@
   "source.fixAll.spotlessGradle": true
   },
   "cSpell.words": [
-    "APRILTAG",
     "algs",
+    "APRILTAG",
     "brushless",
-    "Cancoder",
     "canbus",
+    "Cancoder",
     "CANID",
     "CANIDs",
     "chargedup",
@@ -44,6 +44,7 @@
     "CTRE",
     "curr",
     "DEADBAND",
+    "dtheta",
     "Feedforward",
     "gamepad",
     "gradlew",
