add git config user profiles as recommended extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "richardwillis.vscode-spotless-gradle",
         "sonarsource.sonarlint-vscode",
-        "streetsidesoftware.code-spell-checker"
+        "streetsidesoftware.code-spell-checker",
+        "onlyutkarsh.git-config-user-profiles"
     ]
 }
