disable unused subsystems

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 src/main/java/frc/robot/BuildConstants.java
 
+ctre_sim/*
+
 # This gitignore has been specially created by the WPILib team.
 # If you remove items from this file, intellisense might break.
 
