--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
   "cSpell.words": [
     "algs",
     "APRILTAG",
+    "bezier",
     "brushless",
     "canbus",
     "Cancoder",
@@ -44,18 +45,22 @@
     "CTRE",
     "curr",
     "DEADBAND",
+    "Devs",
     "dtheta",
     "Feedforward",
     "gamepad",
     "gradlew",
     "holonomic",
     "Huskie",
+    "IOCTRE",
     "jama",
     "javac",
     "leds",
     "Nivore",
     "odometry",
     "openloop",
+    "pathfind",
+    "pathfinding",
     "Penrose",
     "photonvision",
     "PIDF",
