--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 src/main/java/frc/robot/BuildConstants.java
 
+ctre_sim/*
+
 # This gitignore has been specially created by the WPILib team.
 # If you remove items from this file, intellisense might break.
 
@@ -43,7 +45,6 @@ src/main/java/frc/robot/BuildConstants.java
 
 # Log file
 *.log
-*.wpilog
 
 # BlueJ files
 *.ctxt
@@ -161,6 +162,15 @@ gradle-app.setting
 .settings/
 bin/
 
+# IntelliJ
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+# Fleet
+.fleet
+
 # Simulation GUI and other tools window save file
 *-window.json
-
