Write system test for drivetrain movement (untested)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,7 @@
   "spotlessGradle.format.enable": true,
   "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle",
   "editor.codeActionsOnSave": {
-  "source.fixAll.spotlessGradle": true
+    "source.fixAll.spotlessGradle": "explicit"
   },
   "cSpell.words": [
     "algs",
