--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,5 +1,5 @@
 {
-  "robotWidth": 0.8382,
+  "robotWidth": 0.84,
   "robotLength": 0.8382,
   "holonomicMode": true,
   "pathFolders": [],
@@ -8,6 +8,5 @@
   "defaultMaxAccel": 4.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
-  "maxModuleSpeed": 4.78,
-  "choreoProjectPath": null
+  "maxModuleSpeed": 4.78
 }
