--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -4,10 +4,9 @@
   "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [],
-  "defaultMaxVel": 4.0,
-  "defaultMaxAccel": 4.0,
-  "defaultMaxAngVel": 540.0,
-  "defaultMaxAngAccel": 720.0,
-  "maxModuleSpeed": 4.78,
-  "choreoProjectPath": null
+  "defaultMaxVel": 3.0,
+  "defaultMaxAccel": 10.0,
+  "defaultMaxAngVel": 561.96,
+  "defaultMaxAngAccel": 2066.2,
+  "maxModuleSpeed": 3.644
 }
