add event deploy wpilib as a recommended extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "richardwillis.vscode-spotless-gradle",
         "sonarsource.sonarlint-vscode",
         "streetsidesoftware.code-spell-checker",
-        "onlyutkarsh.git-config-user-profiles"
+        "onlyutkarsh.git-config-user-profiles",
+        "mechanical-advantage.event-deploy-wpilib"
     ]
 }
