update spelling dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,8 +41,10 @@
     "CANID",
     "CANIDs",
     "chargedup",
+    "Choreo",
     "closedloop",
     "CTRE",
+    "CTRETCF",
     "curr",
     "DEADBAND",
     "Devs",
