--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,8 +3,9 @@
   "robotLength": 0.84,
   "holonomicMode": true,
   "pathFolders": [
+    "4 Note Test Right Side",
     "5 Note Test Left Side",
-    "4 Note Test Right Side"
+    "5 Note Test Collector Side"
   ],
   "autoFolders": [],
   "defaultMaxVel": 4.0,
