5 and 6 note autopath testing

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -4,9 +4,10 @@
   "holonomicMode": true,
   "pathFolders": [
     "4 Note Test Right Side",
+    "5 Note Amp Side 2",
     "5 Note Test Amp Side",
     "5 Note Test Collector Side",
-    "5 Note Amp Side 2"
+    "6 Note Test Amp Side"
   ],
   "autoFolders": [],
   "defaultMaxVel": 4.0,
