--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,12 +1,16 @@
 {
-  "robotWidth": 0.8382,
-  "robotLength": 0.8382,
+  "robotWidth": 0.88,
+  "robotLength": 0.88,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 10.0,
-  "defaultMaxAngVel": 561.96,
-  "defaultMaxAngAccel": 2066.2,
-  "maxModuleSpeed": 3.644
+  "pathFolders": [
+    "Tuning"
+  ],
+  "autoFolders": [
+    "Tuning"
+  ],
+  "defaultMaxVel": 3.25,
+  "defaultMaxAccel": 6.948,
+  "defaultMaxAngVel": 530.0,
+  "defaultMaxAngAccel": 2005.0,
+  "maxModuleSpeed": 3.88
 }
