Update to 2025 beta vendor dependencies.
* Update to WPILib 2025 beta
* Update for revised Units in WPILib 2025
* Update class names and paths for RevLib 2025 (CANSparkMax is now SparkMax and in a different package (com.rev.robotics.spark.SparkMax))
* Update for PathPlanner 2025
* Update for PhotonVision 2025
* Add RobotConfig methods for new PathPlanner configuration
* Update deprecated methods
* stream values from CTRE thread through AdvantageKit (this needs revision)

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2024.3.2"
+    id "edu.wpi.first.GradleRIO" version "2025.1.1-beta-3"
     id 'com.diffplug.spotless' version '6.11.0'
     id "com.peterabeles.gversion" version "1.10"
 }
@@ -59,6 +59,7 @@ def includeDesktopSupport = true
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
+    annotationProcessor wpi.java.deps.wpilibAnnotations()
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
