Update to 2025 vendor dependencies. (#108)
* Update to WPILib 2025 beta
* Update for revised Units in WPILib 2025
* Update class names and paths for RevLib 2025 (CANSparkMax is now SparkMax and in a different package (com.rev.robotics.spark.SparkMax))
* Update for PathPlanner 2025
* Update for PhotonVision 2025
* Add RobotConfig methods for new PathPlanner configuration
* Update deprecated methods
* Stream values from CTRE thread through AdvantageKit (this needs revision)
* Add support for tuning pose estimation.
* Update pose estimator before logging. (Statically allocate the swerve module position array and objects to avoid allocations during periodic. Move the update to the pose estimator before logging the pose to keep the pose synchronized with the other inputs.)
* Add paths and autos to tune odometry. (Update max angular acceleration based on a more reasonable MOI. Three main auto, each with varying speeds: distance (straight line), rotation (straight line with 180° rotation), oval (oval path with rotation and pause.)
* Use new AprilTag field layout.
* Set LEDs to green at start of auto. (Having a clear change in LED color will make it easier to synchronize the video to the log file.)
* Reset the pose via the odometry object when resetting based on vision pose estimate. (When running multiple pose estimators, we need to ensure the pose is reset for all of them; not just the hardware-specific drivetrain subsystem object.)
* Log the pose of the front-right of the robot. (Logging the corner will make it easier to check accuracy on the 1mx1m grid.)
* Log the poses of all AprilTags. (These poses can be displayed on a 3D Field tab in AdvantageScope to visually verify the location of each tag.)
* Add logging to support tuning auto paths. (Log the distance traveled during a tuning auto path. This is useful to compare against the physically measured distance on the carpet.
Log the difference between the final pose based on odometry and the final target

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-src/main/java/frc/robot/BuildConstants.java
-
-ctre_sim/*
-
 # This gitignore has been specially created by the WPILib team.
 # If you remove items from this file, intellisense might break.
 
@@ -173,4 +169,19 @@ out/
 .fleet
 
 # Simulation GUI and other tools window save file
+networktables.json
+# simgui.json
 *-window.json
+
+# Simulation data log directory
+logs/
+
+# Folder that has CTRE Phoenix Sim device config storage
+ctre_sim/
+
+# clangd
+/.cache
+compile_commands.json
+
+# Version file
+src/main/java/frc/robot/BuildConstants.java
