--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,18 +18,26 @@
     {
       "name": "WPIlibUnitTests",
       "workingDirectory": "${workspaceFolder}/build/jni/release",
-      "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/jni/release" ],
+      "vmargs": [
+        "-Djava.library.path=${workspaceFolder}/build/jni/release"
+      ],
       "env": {
-        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release" ,
+        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release",
         "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release"
       }
     },
+    null
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
   "spotlessGradle.format.enable": true,
+  "spotlessGradle.diagnostics.enable": false,
+  "java.import.gradle.annotationProcessing.enabled": false,
   "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle",
-  "editor.codeActionsOnSave": {
-    "source.fixAll.spotlessGradle": "explicit"
+  "[json]": {
+    "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
+  },
+  "[java]": {
+    "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
   },
   "cSpell.words": [
     "algs",
@@ -63,6 +71,7 @@
     "openloop",
     "pathfind",
     "pathfinding",
+    "pathplanner",
     "Penrose",
     "photonvision",
     "PIDF",
@@ -87,5 +96,5 @@
     "WPILOG",
     "Xstance",
     "YUYV"
-  ]  
+  ]
 }
