--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
     "DEADBAND",
     "Devs",
     "dtheta",
-    "Feedforward",
+    "feedforward",
+    "feedforwards",
     "gamepad",
     "gradlew",
     "holonomic",
