Add vision test platform as an additional "robot".
The vision test platform can be used to test vision-related features without having a robot present.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,11 @@
   "[java]": {
     "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
   },
-  "cSpell.enabledFileTypes": {"*":true,"json":false,"gradle":false},
+  "cSpell.enabledFileTypes": {
+    "*": true,
+    "json": false,
+    "gradle": false
+  },
   "cSpell.words": [
     "algs",
     "APRILTAG",
@@ -70,6 +74,7 @@
     "IOCTRE",
     "jama",
     "javac",
+    "Kalman",
     "leds",
     "Nivore",
     "odometry",
@@ -95,6 +100,7 @@
     "SIMBOT",
     "Teleop",
     "teleoperated",
+    "timebase",
     "TRACKWIDTH",
     "tunables",
     "uncomitted",
