Rewrite vision subsystem and add vision test platform (#113)
* Add vision test platform as an additional "robot". (The vision test platform can be used to test vision-related features without having a robot present.)
* Add AprilTag layout for testing at home.
* Update config to use Units.
* Ensure vision test platform robot type is always run in sim.
* Map reset pose to vision to translate joystick button.
* Update vendor deps.
* Rewrite Vision subsystem.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "IOCTRE",
     "jama",
     "javac",
+    "Kalman",
     "leds",
     "Nivore",
     "odometry",
@@ -100,6 +101,7 @@
     "SIMBOT",
     "Teleop",
     "teleoperated",
+    "timebase",
     "TRACKWIDTH",
     "tunables",
     "uncomitted",
