--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
     "Cancoder",
     "CANID",
     "CANIDs",
+    "canivore",
     "chargedup",
     "Choreo",
     "closedloop",
@@ -64,6 +65,7 @@
     "CTRETCF",
     "curr",
     "DEADBAND",
+    "debouncer",
     "Devs",
     "dtheta",
     "feedforward",
