--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,7 @@
     "Nivore",
     "odometry",
     "openloop",
+    "overriden",
     "pathfind",
     "pathfinding",
     "pathplanner",
@@ -108,6 +109,7 @@
     "TRACKWIDTH",
     "tunables",
     "uncomitted",
+    "untilt",
     "Vandermonde",
     "VBAT",
     "wpilib",
