--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,9 +3,11 @@
   "robotLength": 0.85725,
   "holonomicMode": true,
   "pathFolders": [
+    "XRP",
     "Tuning"
   ],
   "autoFolders": [
+    "XRP",
     "Tuning"
   ],
   "defaultMaxVel": 3.0,
