--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "holonomic",
     "Huskie",
     "IOCTRE",
+    "IOXRP",
     "jama",
     "javac",
     "Kalman",
@@ -89,6 +90,7 @@
     "Penrose",
     "photonvision",
     "PIDF",
+    "PPLTV",
     "pseudoinverse",
     "quasistatic",
     "rapidreact",
