Update northstar code for 3061-lib.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
     "Daqs",
     "DEADBAND",
     "debouncer",
+    "denoise",
     "Devs",
     "dtheta",
     "feedforward",
@@ -96,6 +97,7 @@
     "pseudoinverse",
     "quasistatic",
     "rapidreact",
+    "reefscape",
     "reproj",
     "reprojection",
     "REVPHJNI",
