Remove deprecated event deploy extension.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,6 @@
     "richardwillis.vscode-spotless-gradle",
     "sonarsource.sonarlint-vscode",
     "streetsidesoftware.code-spell-checker",
-    "onlyutkarsh.git-config-user-profiles",
-    "mechanical-advantage.event-deploy-wpilib"
+    "onlyutkarsh.git-config-user-profiles"
   ]
 }
