--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
   "cSpell.words": [
     "algs",
     "APRILTAG",
+    "apriltags",
     "autoset",
     "bezier",
     "brushless",
@@ -68,6 +69,8 @@
     "Daqs",
     "DEADBAND",
     "debouncer",
+    "denoise",
+    "denoises",
     "Devs",
     "dtheta",
     "feedforward",
@@ -82,7 +85,9 @@
     "javac",
     "Kalman",
     "leds",
+    "northstar",
     "Nivore",
+    "objdetect",
     "odometry",
     "openloop",
     "overriden",
@@ -96,6 +101,7 @@
     "pseudoinverse",
     "quasistatic",
     "rapidreact",
+    "reefscape",
     "reproj",
     "reprojection",
     "REVPHJNI",
