--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
     "APRILTAG",
     "apriltags",
     "autoset",
+    "Basler",
     "bezier",
     "brushless",
     "canbus",
@@ -105,6 +106,7 @@
     "reproj",
     "reprojection",
     "REVPHJNI",
+    "RGBW",
     "rezero",
     "roboRIO",
     "scurve",
