--- a/.gitignore
+++ b/.gitignore
@@ -170,7 +170,7 @@ out/
 
 # Simulation GUI and other tools window save file
 networktables.json
-# simgui.json
+simgui.json
 *-window.json
 
 # Simulation data log directory
@@ -185,3 +185,6 @@ compile_commands.json
 
 # Version file
 src/main/java/frc/robot/BuildConstants.java
+
+# SysID
+.SysId/sysid.json
